# skypro-hh-vacancies

./: .gitignore  README.md  check_code.sh  main.py  pyproject.toml  test_coverage.sh
data/: vacancies.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_api_py.html  z_145eef247bfb46b6_filehandler_py.html  z_145eef247bfb46b6_vacancy_py.html
src/: api.py  db.py  filehandler.py  hh_api.py  vacancy.py  web_server.py
static/: catalogue.html  category.html  contacts.html  home.html  index.html
tests/: conftest.py  test_api.py  test_data.json  test_filehandler.py  test_vacancy.py
